# tauri-experiments

./: .gitignore  index.html  package.json  prettier.config.js  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: dev.yml  publish.yml  release.yaml  release.yml
src/: app.svelte  app.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: theme.svelte
src/pages/: index.svelte
src/routes/: +layout.ts  +page.svelte
