[package]
name = "app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0.111"
serde = { version = "1.0.195", features = ["derive"] }
tauri = { version = "1.5.4", features = ["window-set-position"] }
sysinfo = { version = "0.29.11" }

[features]
custom-protocol = [ "tauri/custom-protocol" ]
